style: fix Copied button misalignment on mobile browsers (#382)

--- a/client/src/components/LinkDisplay/Style.module.css
+++ b/client/src/components/LinkDisplay/Style.module.css
@@ -42,7 +42,7 @@
   border-width: 1px;
   font-family: inherit;
   font-size: 18px;
-  width: 110px;
+  width: 50px;
   height: 40px;
   border-radius: 5px;
   cursor: pointer;
@@ -123,6 +123,44 @@
   color: #aeaeae;
 }
 
+.qrCodeContainer {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+.qrButton {
+  border-width: 1px;
+  font-family: inherit;
+  font-size: 18px;
+  width: 50px;
+  height: 40px;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+  border-color: #4bb2f9;
+  background: #4bb2f9;
+  color: white;
+  margin-left: 5px;
+  transform: translateY(2px);
+}
+
+.qrButton:hover {
+  background-color: #0056b3; 
+}
+
+.QrCodeContent{
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+}
+
+.qrIcon {
+  display: inline-block;
+  margin-top: 0;
+  transform: none;
+}
+
 @media screen and (min-width: 640px) {
   .fullWidth {
     display: flex;
@@ -150,42 +188,17 @@
     border-top: 1px solid #434343;
     width: 100%;
   }
-}
 
-.qrCodeContainer {
-  margin-top: 20px;
-  display: flex;
-  justify-content: center;
-}
+  .copyButton {
+    width: 100px;
+  }
 
+  .qrButton {
+    width: 100px;
+    transform: none;
+  }
 
-.qrButton {
-  border-width: 1px;
-  font-family: inherit;
-  font-size: 18px;
-  width: 110px;
-  height: 40px;
-  border-radius: 5px;
-  cursor: pointer;
-  outline: none;
-  border-color: #4bb2f9;
-  background: #4bb2f9;
-  color: white;
-  margin-left: 5px;
-}
-
-.qrButton:hover {
-  background-color: #0056b3; 
-}
-
-.QrCodeContent{
-  display: flex;
-  align-items: baseline;
-  justify-content: center;
-}
-
-.qrIcon {
-  display: inline-block;
-  margin-top: 0;
-  transform: translateY(2px);
+  .qrIcon {
+    transform: translateY(2px);
+  }
 }
